Add Fly.io deployment with GitHub Actions CI/CD
- Dockerfiles for backend (Java 21 multi-stage) and frontend (nginx)
- fly.toml configs for both apps (commitplanner-api, commitplanner-web)
- GitHub Actions workflow to deploy on push to main/master
- Runtime API URL injection via docker-entrypoint.sh
- Env-configurable DB connection and CORS origins

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>